# pgOperations

./: .project  404.html  README  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
docs/: .gitignore  explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
explanation/: index.html
how-to-guides/: index.html
mkDocsExample/: index.md  reference.md
reference/: index.html
src/pgOperations/: djangoPermissions.py  pgOperations.py  test.py
tests/: test.py
tutorials/: index.html
