[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pgOperations"
version = "0.0.3"
keywords = ["PostgreSQL", "Psycopg2", "PostGIS", "Utilities"]
authors = [{ name="Gaspar Mora-Navarro", email="joamona@cgf.upv.es" },]
description = "Simple tool to perform the most common operations in PostgreSQL and PostGIS with Psycopg2. Builds the SQL queries from Pyhton dictionaries."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = ["psycopg2"]

[project.urls]
"Repository" = "https://github.com/joamona/pgOperations"
"Documentation" = "https://joamona.github.io/pgOperations/"
